Fix sbu progress align center

--- a/app/assets/stylesheets/myprogress-list.scss
+++ b/app/assets/stylesheets/myprogress-list.scss
@@ -78,6 +78,7 @@
 		}
 		.detail{
 			a{
+				text-align: center;
 			 	color: #00afa3;
 			 }
 			font-size: 1.5em;
@@ -96,11 +97,14 @@
     			height: 5em;
     			margin: 0 auto;
     			p{
-    				margin:1.5em 1em;
+						line-height: 5em;
+    				text-align: center;
     			}
 				}
 				.form-category{
-					margin: 10px 30%;
+					padding:15px;
+					text-align: center;
+					line-height: 100%;
 					font-size :20px;
 				}
 			}
